kubernetes/colorapp/colorapp-red.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: red-app

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-red
  namespace: red-app
spec:
  selector:
    matchLabels:
      app: red
  replicas: 2
  template:
    metadata:
      labels:
        app: red
    spec:
      containers:
      - name: webapp
        image: robokingmaster/examples:colorapp
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service-red
  namespace: red-app
spec:
  selector:
    app: red
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: NodePort
